# flylinkdc-r6xx

./: .gitignore  AGENTS.md  CMakeLists.txt  FlyFeatures_2017.vcxproj  FlylinkDC.rc  FlylinkDC_2017.sln  FlylinkDC_2022.sln  HISTORY.md  LICENSE  README.md  appveyor.yml  boost-regex_2017.vcxproj  boost-regex_2022.vcxproj  boost-regex_2022.vcxproj.filters  branches_list.txt  build-win.sh  build-with-mxe.sh  build_all_2017.bat  build_flylinkdc_2017.bat  build_flylinkdc_x64_2017.bat  build_get_visual_c_version.bat  bzip2_2017.vcxproj  bzip2_2022.vcxproj  clean_all_2017.bat  client_2017.vcxproj  client_2017.vcxproj.filters  flylinkdc_2017.vcxproj  flylinkdc_2017.vcxproj.filters  flylinkdc_2022.vcxproj  revision.h  src_backup_7z.bat  src_exclude.txt  src_exclude_hard.txt  src_include.txt  update_revision.bat  zlib-ng_2017.vcxproj  zlib-ng_2017.vcxproj.filters  zlib-ng_2022.vcxproj  zlib-ng_2022.vcxproj.filters  zlib_2017.vcxproj
FlyFeatures/: AutoUpdate.cpp  AutoUpdate.h  CFlyServerDialogNavigator.h  CFlyTorrentDialog.h  CustomMenuManager.cpp  CustomMenuManager.h  FileRoadMap.cpp  FileRoadMap.h  InetDownloaderReporter.cpp  InetDownloaderReporter.h  RSSManager.cpp  RSSManager.h  SettingsAutoUpdate.cpp  SettingsAutoUpdate.h  ThemeManager.cpp  ThemeManager.h  VideoPreview.cpp  WinFirewall.cpp  flyServer.cpp  flyServer.h  flyfeatures.cpp  flyfeatures.h  fuSearch.cpp  fuSearch.h
GdiOle/: GDIImage.cpp  GDIImage.h  GDIImageOLE.cpp  GDIImageOle.h  GdiOle.rc  GdiOle_2017.vcxproj  GdiOle_2017.vcxproj.filters  GdiOle_2022.vcxproj  GdiOle_2022.vcxproj.filters  resource.h  stdafx.h
MakeDefs/: MakeDefs.vcxproj  StdAfx.h
Tools/: ExtractVersion.bat  UpdateGitRevision.bat
XMLParser/: XMLParser_2017.vcxproj
Zenlib/: History.txt  License.txt  ZenLib_2017.vcxproj
client/: ADLSearch.cpp  ADLSearch.h  AdcCommand.cpp  AdcHub.cpp  AdcHub.h  BaseUtil.cpp  BaseUtil.h  BufferedSocket.cpp  BufferedSocket.h  CFlyMediaInfo.h  CFlySearchItemTTH.h  CFlyThread.h  CFlyUserRatioInfo.cpp  CFlyUserRatioInfo.h  CFlylinkDBManager.cpp  CFlylinkDBManager.h  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  CompatibilityManager.cpp  ConnectionManager.cpp  ConnectionManager.h  ConnectionManagerListener.h  ConnectivityManager.cpp  CryptoManager.cpp  DCPlusPlus.cpp  DebugManager.h  DirectoryListing.cpp  DirectoryListing.h  Download.cpp  Download.h  DownloadManager.cpp  FavoriteManager.cpp  FavoriteManager.h  FavoriteManagerListener.h  FavoriteUser.h  File.cpp  GeoIP.cpp  GeoIP.h  (+75 more)
cmake/: Toolchain-mingw64.cmake
compiled/: readme_changelog_full.rtf  readme_changelog_lite.rtf
jsoncpp/: jsoncpp.cpp
leveldb/: LevelDB_2017.vcxproj  LevelDB_2017.vcxproj.filters  LevelDB_2022.vcxproj  stdinc.h
libtorrent/: ChangeLog  libtorrent_2017.vcxproj  libtorrent_2017.vcxproj.filters  libtorrent_2022.vcxproj  libtorrent_2022.vcxproj.filters
lua/: lua_2017.vcxproj  lua_2022.vcxproj  lua_2022.vcxproj.filters
maxminddb/: libmaxminddb.vcxproj  maxminddb-compat-util.h  maxminddb.c
mediainfolib/: History_DLL.txt  MediaInfoLib_2017.vcxproj  MediaInfoLib_2017.vcxproj.filters  MediaInfoLib_2022.vcxproj  MediaInfoLib_2022.vcxproj.filters
openssl/: openssl_2017.vcxproj  openssl_2017.vcxproj.filters  openssl_2022.vcxproj  openssl_2022.vcxproj.filters  openssl_pch.c  openssl_pch.h
test/: compile-speed-compare.bat  test-console.vcxproj  test-console.vcxproj.filters
unrar/: UnRAR.vcxproj
windows/: AGEmotionSetup.cpp  AGEmotionSetup.h  AboutDlg.h  AboutDlgIndex.h  AddMagnet.cpp  AddMagnet.h  AdvancedPage.cpp  AppearancePage.cpp  AppearancePage.h  BarShader.h  BaseChatFrame.cpp  BaseChatFrame.h  CDMDebugFrame.cpp  CDMDebugFrame.h  CFlyLocationDlg.cpp  CFlyLocationDlg.h  ChatCtrl.cpp  ChatCtrl.h  CheckTargetDlg.cpp  CheckTargetDlg.h  DCLSTPage.cpp  DCLSTPage.h  DefaultClickPage.h  DirectoryListingFrm.cpp  DirectoryListingFrm.h  EmoticonsDlg.cpp  EmoticonsDlg.h  FavHubProperties.cpp  FavoritesFrm.cpp  FavoritesFrm.h  FileSharePage.cpp  FileSharePage.h  FlySQLExplorer.cpp  FlySQLExplorer.h  FlyUpdateDlg.cpp  FlyUpdateDlg.h  GeneralPage.cpp  GeneralPage.h  (+74 more)
(+404 files in other folders)
